<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ShowProfileActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="188dp"
        android:layout_height="84dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="104dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.068"
        app:layout_constraintStart_toEndOf="@+id/profileImageView"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/firstNameTextView"
            android:layout_width="78dp"
            android:layout_height="23dp"
            android:layout_marginStart="16dp"
            android:text="@string/firstNameTextView"
            app:layout_constraintBottom_toBottomOf="@+id/lastNameTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/lastNameTextView"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/lastNameTextView"
            android:layout_width="78dp"
            android:layout_height="23dp"
            android:text="@string/lastNameTextView"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.428"
            app:layout_constraintStart_toEndOf="@+id/firstNameTextView"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/profileImageView"
        android:layout_width="130dp"
        android:layout_height="105dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="88dp"
        android:contentDescription="@string/profileImageView"
        android:text="@string/returnButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/birthDateTextView"
        android:layout_width="156dp"
        android:layout_height="26dp"
        android:layout_marginTop="32dp"
        android:text="@string/birthDateTextView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout3"
        app:layout_constraintVertical_bias="0.2" />

    <TextView
        android:id="@+id/ageTextView"
        android:layout_width="156dp"
        android:layout_height="26dp"
        android:text="@string/ageTextView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/birthDateTextView"
        app:layout_constraintVertical_bias="0.117" />

    <TextView
        android:id="@+id/addressTextView"
        android:layout_width="156dp"
        android:layout_height="26dp"
        android:text="@string/addressTextView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ageTextView"
        app:layout_constraintVertical_bias="0.121" />

    <Button
        android:id="@+id/buttonReturn"
        android:layout_width="77dp"
        android:layout_height="38dp"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/profileImageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.118"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.347"
        tools:text="@string/returnButton" />

</androidx.constraintlayout.widget.ConstraintLayout>